--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "lucide-vue-next": "^0.446.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.4.5"
+    "vue-markdown": "^2.1.3",
+    "vue-router": "^4.4.5",
+    "vue3-markdown-it": "^1.0.10"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
